--- a/davidow/www/views/map.html
+++ b/davidow/www/views/map.html
@@ -111,7 +111,7 @@
 
 </style>
 
-<!--Slider-->
+<!--Slider
 <div id="slider">
 	<div class="tile-piece" ng-repeat="piece in pieces | orderBy : floor">
 		<a href="#/piece/{{piece.id}}"><img src="{{piece.thumb_url}}" /></a>
@@ -120,7 +120,7 @@
 <div id="piece-title"></div>
 <div id="piece-next"></div>
 <div id="piece-prev"></div>
-
+-->
 
 <!--zoom-->
 <div id="zoom-in">+</div>
@@ -130,4 +130,3 @@
 
 <object id="svgload"></object>
 
-<br><br><br><br><br>
