--- a/davidow/www/css/masterLight.css
+++ b/davidow/www/css/masterLight.css
@@ -218,7 +218,7 @@ object{
 #zoom-in{
     position: fixed;
     right: 20px;
-    bottom: 80px;
+    bottom: 90px;
     font-size: 20px;
     background: #4FC5E7;
     height: 50px;
@@ -229,11 +229,12 @@ object{
     box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.33);
     color: white;
     padding-top: 11px;
+    transition: .3s;
 }
 #zoom-out{
   position: fixed;
   right: 20px;
-  bottom: 20px;
+  bottom: 30px;
   font-size: 20px;
   background: #4FC5E7;
   height: 50px;
@@ -244,6 +245,7 @@ object{
   box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.33);
   color: white;
   padding-top: 11px;
+  transition: .3s;
 }
 
 .faded{
@@ -306,8 +308,9 @@ border-right:20px solid white;
   height: 200px;
   background: #f7f7f7;
   text-align: center;
-  overflow-y:scroll;
+  overflow: hidden;  
   transition: .3s;
+  padding-top: 20px;
 }
 
 
@@ -341,10 +344,11 @@ border-right:20px solid white;
 #tray-close-btn{
   box-shadow: 0 0 2px #676767;
   padding: 2px 0;
-  position: absolute;
+  position: fixed;
   width: 100%;
   background: white;
   z-index: 10;
+  bottom: 0;
 }
 
 #arrow{
@@ -353,7 +357,11 @@ border-right:20px solid white;
 
 .tray-open{
   bottom:0px !important;
-  overflow: hidden !important;  
+  overflow-y:scroll !important;
+}
+
+.tray-btn-open{
+  bottom: 176px !important;
 }
 
 .rotate-arrow{
@@ -362,4 +370,12 @@ border-right:20px solid white;
 
 .menu-padding{
   padding-bottom: 200px !important;
+}
+
+.in-pad{
+  bottom: 290px !important;
+}
+
+.out-pad{
+  bottom: 230px !important;
 }
