--- a/davidow/platforms/android/assets/www/css/masterLight.css
+++ b/davidow/platforms/android/assets/www/css/masterLight.css
@@ -184,3 +184,198 @@ margin-top: 1px;
     font-size: 30px;
     top: 17px;
 }
+
+
+/*map*/
+::-webkit-scrollbar { 
+    display: none; 
+}
+.tile-piece{
+  transition: .5s;
+}
+.tile-piece, .tile-piece img{
+  height: 100px;
+  width:100px;
+  display: inline-block;
+}
+#slider{
+  overflow-x:scroll;
+  overflow-y:hidden;
+  white-space: nowrap;
+  position: fixed;
+  width:100%;
+  background: white;
+    box-shadow: 0 3px 1px rgba(0, 0, 0, 0.43);  
+}
+#map-container{
+  padding-top: 125px;
+}
+object{
+  padding: 0 10px;
+  margin-bottom: 100px;
+}
+
+#zoom-in{
+    position: fixed;
+    right: 20px;
+    bottom: 90px;
+    font-size: 20px;
+    background: #4FC5E7;
+    height: 50px;
+    width: 50px;
+    margin: auto;
+    text-align: center;
+    border-radius: 50%;
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.33);
+    color: white;
+    padding-top: 11px;
+    transition: .3s;
+}
+#zoom-out{
+  position: fixed;
+  right: 20px;
+  bottom: 30px;
+  font-size: 20px;
+  background: #4FC5E7;
+  height: 50px;
+  width: 50px;
+  margin: auto;
+  text-align: center;
+  border-radius: 50%;
+  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.33);
+  color: white;
+  padding-top: 11px;
+  transition: .3s;
+}
+
+.faded{
+  -webkit-opacity: .2;
+}
+#piece-title{
+  -webkit-opacity: 0;
+  transition: .5s;
+  position: fixed;
+  top: 125px;
+  padding: 5px 20px;
+  width: 100%;
+  background: rgba(0, 0, 0, 0.58);
+  color: white;
+  letter-spacing: 1px;
+  text-align: center;
+}
+#piece-next,#piece-prev{
+  position: fixed;
+  top: 130px;
+  font-size: 40px;
+  z-index: 9999;
+  color: white;
+  -webkit-opacity:0;
+  transition: .5s;
+}
+#piece-next{
+  right:15px;
+width: 0; 
+height: 0; 
+border-top: 10px solid transparent;
+border-bottom: 10px solid transparent;
+border-left: 20px solid white;
+}
+#piece-prev{
+  left: 15px;
+width: 0; 
+height: 0; 
+border-top: 10px solid transparent;
+border-bottom: 10px solid transparent; 
+border-right:20px solid white; 
+}
+
+
+.found{
+  fill: red;
+  transition: 1s;
+}
+.normal{
+  fill: #4FC5E7;
+  transition: 1s;
+}
+
+
+#tray{
+  width: 100%;
+  position: fixed;
+  bottom: -180px;
+  left: 0;
+  height: 200px;
+  background: #f7f7f7;
+  text-align: center;
+  overflow: hidden;  
+  transition: .3s;
+  padding-top: 20px;
+}
+
+
+.tray-item{
+ width: 100%;
+ border-bottom: 1px solid #b5b5b5;
+ padding:10px;
+}
+
+.tray-item a img{
+  height: 100px;
+  width: 100px;
+}
+
+.left-align{
+  text-align: left;
+}
+
+.tray-title{
+  font-weight: bold;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  font-size: 1.2em;
+}
+
+.tray-artist{
+  color: #9E9E9E;
+}
+
+#tray-close-btn{
+  box-shadow: 0 0 2px #676767;
+  padding: 2px 0;
+  position: fixed;
+  width: 100%;
+  background: white;
+  z-index: 10;
+  bottom: 0;
+}
+
+#arrow{
+  transition: .3s;
+}
+
+.tray-open{
+  bottom:0px !important;
+  overflow-y:scroll !important;
+}
+
+.tray-btn-open{
+  bottom: 176px !important;
+}
+
+.rotate-arrow{
+  transform: rotate(180deg);
+}
+
+.menu-padding{
+  padding-bottom: 200px !important;
+}
+
+.in-pad{
+  bottom: 290px !important;
+}
+
+.out-pad{
+  bottom: 230px !important;
+}
