--- a/davidow/platforms/android/res/xml/config.xml
+++ b/davidow/platforms/android/res/xml/config.xml
@@ -8,7 +8,7 @@
         <param name="android-package" value="org.apache.cordova.splashscreen.SplashScreen" />
         <param name="onload" value="true" />
     </feature>
-    <preference name="Fullscreen" value="true" />
+    <preference name="Fullscreen" value="false" />
     <preference name="SplashScreen" value="screen" />
     <preference name="SplashScreenDelay" value="3000" />
     <name>Joan Davidow Collection</name>
