solved the flicker

--- a/davidow/www/views/map.html
+++ b/davidow/www/views/map.html
@@ -36,6 +36,7 @@
 			<div class="col-xs-8 left-align">
 				<div class="tray-title">{{piece.piece_title}}</div>
 				<div class="tray-artist">{{piece.artist}}</div>
+				<div class="tray-floor">Floor {{piece.floor}}</div>
 			</div>
 		</div>
 	</div>
